--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "axios-cache-adapter",
   "version": "2.7.3",
   "description": "Caching adapter for axios",
-  "homepage": "https://github.com/RasCarlito/axios-cache-adapter",
+  "homepage": "https://github.com/localz/axios-cache-adapter",
   "author": {
-    "name": "Carl Ogren",
-    "email": "rascarlito@gmail.com",
+    "name": "localz",
+    "email": "michael@localz.co",
     "url": "https://github.com/RasCarlito"
   },
   "files": [
