chore: fixed yml

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,14 +1,13 @@
 env:
-  NODE_VERSION: "12" # The version of Node to use while building your package
-
+  NODE_VERSION: "12"
 steps:
   - label: ":hammer: Build and Test"
     command:
-      - npm config set "//registry.npmjs.org/:_authToken" $${NPM_TOKEN} # Sets the NPM_TOKEN from the Buildkite secrets file
+      - npm config set "//registry.npmjs.org/:_authToken" $${NPM_TOKEN}
       - npm install
       - npm test
     plugins:
-			- docker-login#v2.0.1:
+      - docker-login#v2.0.1:
           username: localzservice
           password-env: DOCKER_LOGIN_PASSWORD
       - docker#v3.5.0:
@@ -16,15 +15,15 @@ steps:
           environment:
             - NPM_TOKEN
 
-  - wait: ~ # Wait until the Build & Test job passes before continuing
+  - wait: ~
 
   - label: ":cloud: Publish"
-    if: build.tag != null # Only publish to NPM if the build is a tagged release
+    if: build.tag != null
     commands:
       - npm config set "//registry.npmjs.org/:_authToken" $${NPM_TOKEN}
       - npm publish
     plugins:
-			- docker-login#v2.0.1:
+      - docker-login#v2.0.1:
           username: localzservice
           password-env: DOCKER_LOGIN_PASSWORD
       - docker#v3.5.0:
