--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "axios-cache-adapter",
+  "name": "@localz/axios-cache-adapter",
   "version": "2.8.1",
   "description": "Caching adapter for axios",
   "homepage": "https://github.com/localz/axios-cache-adapter",
@@ -36,7 +36,7 @@
     "test": "NODE_ENV=test karma start karma.conf.js",
     "watch": "NODE_WATCH=true npm test"
   },
-  "repository": "https://github.com/RasCarlito/axios-cache-adapter",
+  "repository": "https://github.com/localz/axios-cache-adapter",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.1.2",
